--- a/main.html
+++ b/main.html
@@ -7,14 +7,23 @@
 </head>
 
 <body>
-      <nav>
-		  <h1>Website Title</h1>
- <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    </ul>
-    <img src="logo.png" alt="Logo">
-</nav>
+      <h1 role="heading">Welcome to My Portfolio</h1>
+
+
+  <img role="img" src="profile.jpg" alt="A headshot of Jane Doe smiling" />
+
+  
+  <p id="about">
+    Hello! I'm Jane Doe, a front-end developer focused on building accessible and user-friendly web applications.
+  </p>
+
+  <!-- List of skills with ARIA roles -->
+  <h2 role="heading" id="projects">Key Skills</h2>
+  <ul role="list">
+    <li role="listitem">HTML & CSS</li>
+    <li role="listitem">JavaScript & React</li>
+    <li role="listitem">Accessibility Best Practices</li>
+  </ul>
 
 
 
